src/index.css
body {
  margin: 0;
  padding: 0;
  font-family: sans-serif;
}

.main-loader-container {
  min-height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
}


.login-container {
  min-height: 100vh;
  display: flex;
  flex-flow: column;
  align-items: center;
  justify-content: center;
}



.footer {
  height: 100px;
  position: absolute;
  text-align: center;
  bottom: 0;
}

